Contrast is fixed

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -154,7 +154,7 @@ h2 {
 }
 
 .weather-card {
-    background-color: #5b5b5b;
+    background-color: #575757;
     color: white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
